--- a/complementares_For-master/02_comprasFeira.html
+++ b/complementares_For-master/02_comprasFeira.html
@@ -16,9 +16,16 @@
 
     //ENTRADA
 
+    const tomate = Number(prompt("Informe quantos kg de tomate foram vendidos:"))
+    const batata = Number(prompt("Informe quantos kg de batata foram vendidos:"))
+    const batata_doce = Number(prompt("Informe quantos kg de batata-doce foram vendidos:"))
+    const alface = Number(prompt("Informe quantos kg de alface foram vendidos:"))
+    const cebola = Number(prompt("Informe quantos kg de cebola foram vendidos:"))
+    const cebolinha = Number(prompt("Informe quantos kg de cebolinha foram vendidos:"))
+    const beterraba = Number(prompt("Informe quantos kg de beterraba foram vendidos:"))
 
     //PROCESSAMENTO
-
+    const total = (tomate * 3.90) + (batata * 3.40) + (batata_doce * 4.70) + (alface * 1.50) + (cebola * 2.90) + (cebolinha * 1.40) + (beterraba * 4.10);
     
     //SAÍDA
     
